# cmake-swig-r-example

./: CMakeLists.txt  README.rst  Variable.cpp  Variable.h  base.i  t_agrum.R
.github/workflows/: build.yml
cmake/: FindR.cmake
